--- a/hvc_new/Notebooks/Parser.ipynb
+++ b/hvc_new/Notebooks/Parser.ipynb
@@ -47,7 +47,7 @@
     }
    ],
    "source": [
-    "parser = LogParser(params = ['E10', 'I1', 'A1', 'D1'])\n",
+    "parser = LogParser()\n",
     "df = parser.df"
    ]
   },
